# wordle_cheat

./: .gitignore  README.md  pyproject.toml
wordle_cheat/: cli.py  test_wordle.py  wordle.py
